# -req-orchestrator

./: .dockerignore  .env.example  .gitignore  ARCH_TEAM_ANALYSIS.md  ATOMICITY_AGENT_IMPLEMENTATION.md  BUGFIX_REPORT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.fastapi  FRONTEND_FIXES_TODO.md  LICENSE  MANIFEST_SYSTEM_IMPLEMENTATION.md  PORT_ANALYSIS_PART1.txt  PORT_MIGRATION_GUIDE.md  README.md  README_FASTAPI.md  README_FRONTEND.md  README_MCP.md  TEST_ANALYSIS_REPORT.md  TEST_FIX_SUMMARY.md  VALIDATION_SYSTEM_IMPLEMENTATION.md  VICTORY_SUMMARY.md  analyze_arch_team_usage.py  analyze_comprehensive.py  analyze_external_deps.py  docker-compose.fastapi.yml  docker-compose.qdrant.yml  docker-compose.yml  fastapi_frontend.html  fastapi_main.py  index.html  kill_backend.ps1  live_test_fastapi.py  nginx.conf  openapi_temp.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  (+18 more)
.claude/: settings.local.json
agent_worker/: Dockerfile  app.py  requirements.txt
arch_team/: FLOWS.md  PARALLEL_VALIDATION_DESIGN.md  README.autogen_rac.md  README.md  REQUIREMENTS_VALIDATION_DESIGN.md  __init__.py  autogen_rac.py  main.py  service.py  test_imports.py  test_validation_e2e.py
backend/: README.md  __init__.py  api_v2.py  api_v2_part2.py  main.py  schemas.py
backend_app/: __init__.py  agents.py  api.py  api_lx_fixed.py  batch.py  db_async.py  llm.py  llm_async.py  logging_ext.py  settings.py  vector_store.py
backend_app_fastapi/: api_fast.py
backend_app_v2/: __init__.py  api_v2.py  api_v2_part2.py  main.py  schemas.py
config/: criteria.json  template_aliases.json
data/: moire_mouse_tracking_requirements.md  requirements.md  requirements.out.md  test_req_unsotiert.md  tool_performance_requirements.md  unstable_requirements.md
dev/: README.md  qdrant_migrate.py  requirements.txt  run_extract.py
docs/: ARCHITECTURE_OVERVIEW.md  CORS_SSE_DEBUG.md  DOCUMENTATION_UPDATE_CHECKLIST.md  FRONTEND_CLEANUP_PLAN.md  SYSTEM_OVERVIEW.md  feature-auto-refine.md
electron-demo/: index.html  main.js  package-lock.json  package.json  preload.js
frontend/: app.js  app_optimized.js  config.js  index.html  kg_view.html  mining_demo.html  mining_demo.js  react-app.jsx  reports.html  reports.js  sample_requirements.md  styles.css  tag_view.html
mcp_server/: __init__.py  config.py  server.py
plans/: requirements-mermaid-kg-system.md
public/: Abrechnung.md  Auftragsmanagement.md  Benutzer_Rollenverwaltung.md  Disposition.md  Geschaeftspartner.md  Integration_API_Gateway.md  POD_Management.md  (+5 more)
scripts/: README.md  (+24 more)
(+383 files in other folders)
